src/App.css
/*
  1. Use a more-intuitive box-sizing model.
*/
*,
*::before,
*::after {
   box-sizing: border-box;
}
/*
  2. Remove default margin
*/
* {
   margin: 0;
}
/*
  Typographic tweaks!
  3. Add accessible line-height
  4. Improve text rendering
*/
body {
   line-height: 1.5;
   -webkit-font-smoothing: antialiased;
}
/*
  5. Improve media defaults
*/
img,
picture,
video,
canvas,
svg {
   display: block;
   max-width: 100%;
}
/*
  6. Remove built-in form typography styles
*/
input,
button,
textarea,
select {
   font: inherit;
}
/*
  7. Avoid text overflows
*/
p,
h1,
h2,
h3,
h4,
h5,
h6 {
   overflow-wrap: break-word;
}
/*
  8. Create a root stacking context
*/
#root,
#__next {
   isolation: isolate;
}

body,
html {
   height: 100%;
   color: #333;
   /* background: #cecece; */

   --blue: #0d5b97;
   --gold: #ae802d;
}

a {
   text-decoration: none;
   color: currentColor;
   transition: color 400ms;
}

.App {
   padding: 0 20px;
   position: relative;
}

.container {
   padding-top: 100px;
}

.content {
   max-width: 60rem;
   margin: 0 auto;
   background: #fff;
}

main {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
}

.logoBox {
   padding-bottom: 80px;
}
.logoBox img {
   width: 300px;
   margin: 0 auto;
}

.home .options {
   display: flex;
   justify-content: center;
   text-align: center;
   gap: 90px;
   font-family: "felt-tip-woman", sans-serif;
}

nav {
   font-size: 1.6rem;
   font-family: "felt-tip-woman", sans-serif;
}

.home .options a.web:hover {
   color: var(--gold);
}

.home .options a.creative:hover {
   color: var(--blue);
}

.home .options span {
   display: block;
   font-size: 1.8rem;
   margin-top: 20px;
   line-height: 1.5rem;
}

.home a {
   position: relative;
}

.home .options img {
   height: 200px;
}

.home a .art > div {
   position: relative;
   top: -5px;
}

.home .art img:first-child,
.home .web img:first-child {
   position: absolute;
   transition: all 400ms;
}

.home .art:hover img:first-child,
.home .web:hover img:first-child {
   opacity: 0;
}

.header {
   max-width: 60rem;
   margin: 0 auto;
   padding: 20px 0;
   display: flex;
   align-items: center;
   justify-content: space-between;
}

.header .headerLogo img {
   width: 200px;
}

.header nav ul {
   list-style: none;
   display: flex;
   gap: 25px;
   padding: 0;
}

.header nav a.active {
   pointer-events: none;
   color: var(--gold);
}
.header nav a.active.creative {
   pointer-events: none;
   color: var(--blue);
}

main.web {
   align-items: normal;
   height: auto;
}

main.creative {
   display: block;
}

.topBar {
   position: absolute;
   width: 100%;
   top: 0;
   left: 0;
   padding: 0 20px;
}

.grid {
   display: grid;
   grid: repeat(3, auto) / repeat(3, auto);
   width: 100%;
   gap: 10px;
}

.grid img {
   -webkit-box-shadow: 2px 3px 8px 5px rgba(0, 0, 0, 0.1);
   -moz-box-shadow: 2px 3px 8px 5px rgba(0, 0, 0, 0.1);
   box-shadow: 2px 3px 8px 5px rgba(0, 0, 0, 0.1);
}

.grid > div {
   padding: 10px;
}

.modal {
   position: fixed;
   padding: 10px;
   top: 50%;
   left: 50%;
   width: min(70rem, 85vw);
   background: #fff;
   z-index: 99;
   border: solid 1px;
   transform: translate(-50%, -50%);
   font-family: "Roboto", sans-serif;
}

.modal.img {
   width: auto;
}

.backdrop {
   position: fixed;
   inset: 0;
   background: rgba(0, 0, 0, 0.5);
}
.closeM {
   position: absolute;
   right: -30px;
   top: -40px;
   font-size: 2rem;
   cursor: pointer;
}

.innerModal {
   display: flex;
}
.projectImg {
   width: 80%;
}
.projectInfo {
   width: 20%;
   background: #fff;
}
.modal.img .projectInfo {
   display: none;
}

.modal.img .projectImg {
   width: auto;
}

.modal a {
   color: var(--blue);
}

.modal a:hover {
   color: var(--gold);
}
.my-masonry-grid_column > div img:hover,
.grid img {
   cursor: pointer;
   transition: all 300ms;
}

/* .my-masonry-grid_column > div img:hover, */
.grid img:hover {
   scale: 1.1;
}

a.visit {
   display: none;
}
.web.underline {
   height: 1px;
   background: var(--gold);
}

.underline {
   height: 1px;
   background: #333;
}

.creative.underline {
   height: 1px;
   background: var(--blue);
}
/* masonary */

.my-masonry-grid {
   display: -webkit-box; /* Not needed if autoprefixing */
   display: -ms-flexbox; /* Not needed if autoprefixing */
   display: flex;
   /* margin-left: -30px; gutter size offset */
   width: auto;
}
.my-masonry-grid_column {
   padding-left: 10px; /* gutter size */
   background-clip: padding-box;
}

/* Style your items */
.my-masonry-grid_column > div {
   /* change div to reference your elements you put in <Masonry> */
   margin-bottom: 10px;
}

/* fix */
.my-masonry-grid_column > div img {
   margin: 0 auto;
}

/* tooltip */

/* setup tooltips */
[data-tooltip] {
   position: relative;
}
[data-tooltip]:before,
[data-tooltip]:after {
   display: block;
   opacity: 0;
   pointer-events: none;
   position: absolute;
}
[data-tooltip]:after {
   border-right: 6px solid transparent;
   border-bottom: 6px solid rgba(0, 0, 0, 0.75);
   border-left: 6px solid transparent;
   content: "";
   height: 0;
   top: 20px;
   left: 20px;
   width: 0;
}
[data-tooltip]:before {
   background: rgba(0, 0, 0, 0.75);
   border-radius: 2px;
   color: #fff;
   content: attr(data-title);
   font-size: 14px;
   padding: 6px 10px;
   top: 26px;
   white-space: nowrap;
}

/* the animations */
/* fade */
[data-tooltip].fade:after,
[data-tooltip].fade:before {
   transform: translate3d(0, -10px, 0);
   transition: all 0.15s ease-in-out;
}
[data-tooltip].fade:hover:after,
[data-tooltip].fade:hover:before {
   opacity: 1;
   transform: translate3d(0, 0, 0);
}

/* Smartphones (portrait and landscape) ----------- */
@media only screen and (max-width: 600px) {
   .grid {
      grid: inherit;
   }

   .innerModal {
      flex-direction: column;
   }

   .projectInfo,
   .projectImg {
      width: auto;
   }

   .container {
      padding-top: 140px !important;
   }

   .projectInfo {
      padding: 20px 0;
   }

   .header {
      flex-direction: column;
      gap: 12px;
   }
   .my-masonry-grid_column > div img {
      pointer-events: none;
   }
}

